test/compilable/test19656.d
import test19656a;
import test19656c: Thud;
class Foo
{
    Foo[Foo] _map;
    void func (Thud ) { }
    void thunk () { }
}


