test/fail_compilation/fail41.d
class MyClass
{
}

MyClass[char[]] myarray;

void fn()
{
    foreach (MyClass mc; myarray) return mc;
}

